Made touch ups to HTML Coding
May 15, 2013

--- a/kauck_kyle_project2/gold_app/css/styles.css
+++ b/kauck_kyle_project2/gold_app/css/styles.css
@@ -5,6 +5,21 @@ MIU 1305
 May 7, 2013
 */
 
+/* Link/Index Styling */
+
+.cta {
+	text-align: center;
+}
+
+input {
+    box-shadow: 0px 0px 8px rgba(9,17,80,0.4);
+    border: solid 1px black;
+}
+
+input:focus {
+    border: solid 1px #429bb8;
+}
+
 .newsfeedGame {
 	padding-bottom: 10px;
 }
@@ -22,6 +37,39 @@ May 7, 2013
 	font-size: 18px;
 	font-family: Helvetica, Arial, sans-serif;
 }
+
+/* JSON Display */
+
+#gameListInfo {
+	border-bottom: 1px solid rgba(9,17,80,0.56);
+	border-right: 1px solid rgba(9,17,80,0.56);
+	border-left: 1px solid rgba(9,17,80,0.56);
+	padding-top: 0;
+	padding-bottom: 0;
+	width: 310px;
+}
+
+#gameInfoList {
+	display: block;
+}
+
+#gameInfoList:last-child {
+    border-bottom: 1px solid rgba(9,17,80,0.56);
+    padding-bottom: 10px;
+}
+
+#gameInfoList:first-child {
+    font-family: "Tauri", sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    text-align: center;
+    color: white;
+    background-color: #082863;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+/* Error Display */
 
 .warning {
 	background-color: rgba(245,16,16,0.2);
