--- a/kauck_kyle_project2/bronze_app/css/styles.css
+++ b/kauck_kyle_project2/bronze_app/css/styles.css
@@ -1,14 +1,18 @@
 /*
 Kyle Kauck
-Project One
+Project Two
 MIU 1305
-May 7, 2013
+May 13, 2013
 */
 
 /* Link/Grid/Index Styling */
 
 .cta {
 	text-align: center;
+}
+
+a {
+	text-decoration: none;
 }
 
 .centerPage {
