--- a/kauck_kyle_project2/gold_app/css/styles.css
+++ b/kauck_kyle_project2/gold_app/css/styles.css
@@ -1,12 +1,11 @@
 /*
 Kyle Kauck
-Project One
+Project Two
 MIU 1305
-May 7, 2013
+May 13, 2013
 */
 
 /* Link/Index Styling */
-
 .cta {
 	text-align: center;
 }
