--- a/kauck_kyle_project3/gold_app/css/styles.css
+++ b/kauck_kyle_project3/gold_app/css/styles.css
@@ -10,15 +10,6 @@ May 13, 2013
 	text-align: center;
 }
 
-input {
-    box-shadow: 0px 0px 8px rgba(9,17,80,0.4);
-    border: solid 1px black;
-}
-
-input:focus {
-    border: solid 1px #429bb8;
-}
-
 .newsfeedGame {
 	padding-bottom: 10px;
 }
@@ -68,31 +59,25 @@ input:focus {
     padding-bottom: 10px;
 }
 
-/* Error Display */
+/* Form Display */
 
-.warning {
-	background-color: rgba(245,16,16,0.2);
-    border: 2px solid red;
-    margin-bottom: 3px;
-    margin-left: 3px;
-    margin-right: 3px;
-}
-
-#warningSystem {
-	display: none;
-	font-size: 14px;
+#required {
 	font-weight: bold;
-	background-color: rgba(245,16,16,0.2);
-    border: 2px solid red;
-    margin-bottom: 3px;
-    margin-left: 3px;
-    padding: 10px 10px;
 }
 
-#errorMessages {
-	color: #272727;
-	background-color: rgba(245,16,16,0);
-	margin-right: 0px;
-    margin-bottom: 3px;
-    padding-left: 0px;
+#example {
+	display: block;
+	font-size: smaller;
+	margin-top: 10px; 
+}
+
+label.error {
+	display: block;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	color: red;
+}
+
+#formErrorPopUp {
+	display: none;
 }
