--- a/kauck_kyle_project3/bronze_app/css/styles.css
+++ b/kauck_kyle_project3/bronze_app/css/styles.css
@@ -77,7 +77,11 @@ input:focus {
     padding-bottom: 10px;
 }
 
-/* Error Display */
+/* Form Display */
+
+#inputHint {
+	font-size: 14px;
+}
 
 .warning {
 	background-color: rgba(245,16,16,0.2);
