Attempt to fix header issue
May 26, 2013

--- a/kauck_kyle_project4/gold_app/css/themes/styles.css
+++ b/kauck_kyle_project4/gold_app/css/themes/styles.css
@@ -515,3 +515,9 @@ a.ui-link-inherit {
 	outline-width: 1px;
 	outline-style: auto;
 }
+
+
+.ui-header .ui-title {
+    margin-right: 10%;
+    margin-left: 10%;
+}
