--- a/kauck_kyle_project4/bronze_app/css/themes/styles.css
+++ b/kauck_kyle_project4/bronze_app/css/themes/styles.css
@@ -14,17 +14,17 @@
 /* A
 -----------------------------------------------------------------------------------------------------------*/
 .ui-bar-a {
-	border: 1px solid #1c2f40 /*{a-bar-border}*/;
-	background: #1c2f40 /*{a-bar-background-color}*/;
+	border: 1px solid #c1272d /*{a-bar-border}*/;
+	background: #c1272d /*{a-bar-background-color}*/;
 	color: #ffffff /*{a-bar-color}*/;
 	font-weight: bold;
 	text-shadow: 0 /*{a-bar-shadow-x}*/ 1px /*{a-bar-shadow-y}*/ 0 /*{a-bar-shadow-radius}*/ #444444 /*{a-bar-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #1e3346 /*{a-bar-background-start}*/), to( #192a39 /*{a-bar-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #1e3346 /*{a-bar-background-start}*/, #192a39 /*{a-bar-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #1e3346 /*{a-bar-background-start}*/, #192a39 /*{a-bar-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #1e3346 /*{a-bar-background-start}*/, #192a39 /*{a-bar-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #1e3346 /*{a-bar-background-start}*/, #192a39 /*{a-bar-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #1e3346 /*{a-bar-background-start}*/, #192a39 /*{a-bar-background-end}*/);
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #d42a31 /*{a-bar-background-start}*/), to( #ad2328 /*{a-bar-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #d42a31 /*{a-bar-background-start}*/, #ad2328 /*{a-bar-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #d42a31 /*{a-bar-background-start}*/, #ad2328 /*{a-bar-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #d42a31 /*{a-bar-background-start}*/, #ad2328 /*{a-bar-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #d42a31 /*{a-bar-background-start}*/, #ad2328 /*{a-bar-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #d42a31 /*{a-bar-background-start}*/, #ad2328 /*{a-bar-background-end}*/);
 }
 .ui-bar-a .ui-link-inherit {
 	color: #ffffff /*{a-bar-color}*/;
@@ -47,20 +47,20 @@
 .ui-bar-a select,
 .ui-bar-a textarea,
 .ui-bar-a button {
-	   font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	     font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-body-a,
 .ui-overlay-a {
-	border: 1px solid #46515b /*{a-body-border}*/;
 	color: #ffffff /*{a-body-color}*/;
 	text-shadow: 0 /*{a-body-shadow-x}*/ 1px /*{a-body-shadow-y}*/ 0 /*{a-body-shadow-radius}*/ #444444 /*{a-body-shadow-color}*/;
-	background: #BDDAF5 /*{a-body-background-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #8296a9 /*{a-body-background-start}*/), to( #8296a9 /*{a-body-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #8296a9 /*{a-body-background-start}*/, #8296a9 /*{a-body-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #8296a9 /*{a-body-background-start}*/, #8296a9 /*{a-body-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #8296a9 /*{a-body-background-start}*/, #8296a9 /*{a-body-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #8296a9 /*{a-body-background-start}*/, #8296a9 /*{a-body-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #8296a9 /*{a-body-background-start}*/, #8296a9 /*{a-body-background-end}*/);
+	background: #4d4d4d /*{a-body-background-color}*/;
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #545454 /*{a-body-background-start}*/), to( #454545 /*{a-body-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #545454 /*{a-body-background-start}*/, #454545 /*{a-body-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #545454 /*{a-body-background-start}*/, #454545 /*{a-body-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #545454 /*{a-body-background-start}*/, #454545 /*{a-body-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #545454 /*{a-body-background-start}*/, #454545 /*{a-body-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #545454 /*{a-body-background-start}*/, #454545 /*{a-body-background-end}*/);
+	padding-bottom: 0px;
 }
 .ui-overlay-a {
 	background-image: none;
@@ -71,81 +71,81 @@
 .ui-body-a select,
 .ui-body-a textarea,
 .ui-body-a button {
-	   font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	     font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-body-a .ui-link-inherit {
-	color: #1c1d1b /*{a-body-color}*/;
+	color: #ffffff /*{a-body-color}*/;
 }
 .ui-body-a .ui-link {
-	color: #f5f5f5 /*{a-body-link-color}*/;
+	color: #88c7f2 /*{a-body-link-color}*/;
 	font-weight: bold;
 }
 .ui-body-a .ui-link:visited {
-    color: #f5f5f5 /*{a-body-link-visited}*/;
+    color: #2489ce /*{a-body-link-visited}*/;
 }
 .ui-body-a .ui-link:hover {
-	color: #ff9e30 /*{a-body-link-hover}*/;
+	color: #2489ce /*{a-body-link-hover}*/;
 }
 .ui-body-a .ui-link:active {
-	color: #f5f5f5 /*{a-body-link-active}*/;
+	color: #2489ce /*{a-body-link-active}*/;
 }
 .ui-btn-up-a {
-	border: 1px solid #030f40 /*{a-bup-border}*/;
-	background: #32638A /*{a-bup-background-color}*/;
+	border: 1px solid #e6e6e6 /*{a-bup-border}*/;
+	background: #e6e6e6 /*{a-bup-background-color}*/;
 	font-weight: bold;
-	color: #ffffff /*{a-bup-color}*/;
-	text-shadow: 0 /*{a-bup-shadow-x}*/ 2px /*{a-bup-shadow-y}*/ 0 /*{a-bup-shadow-radius}*/ #444444 /*{a-bup-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #4384b8 /*{a-bup-background-start}*/), to( #21415b /*{a-bup-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #4384b8 /*{a-bup-background-start}*/, #21415b /*{a-bup-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #4384b8 /*{a-bup-background-start}*/, #21415b /*{a-bup-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #4384b8 /*{a-bup-background-start}*/, #21415b /*{a-bup-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #4384b8 /*{a-bup-background-start}*/, #21415b /*{a-bup-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #4384b8 /*{a-bup-background-start}*/, #21415b /*{a-bup-background-end}*/);
+	color: #000000 /*{a-bup-color}*/;
+	text-shadow: 0 /*{a-bup-shadow-x}*/ 1px /*{a-bup-shadow-y}*/ 0 /*{a-bup-shadow-radius}*/ #eeeeee /*{a-bup-shadow-color}*/;
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #fdfdfd /*{a-bup-background-start}*/), to( #cfcfcf /*{a-bup-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #fdfdfd /*{a-bup-background-start}*/, #cfcfcf /*{a-bup-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #fdfdfd /*{a-bup-background-start}*/, #cfcfcf /*{a-bup-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #fdfdfd /*{a-bup-background-start}*/, #cfcfcf /*{a-bup-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #fdfdfd /*{a-bup-background-start}*/, #cfcfcf /*{a-bup-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #fdfdfd /*{a-bup-background-start}*/, #cfcfcf /*{a-bup-background-end}*/);
 }
 .ui-btn-up-a:visited,
 .ui-btn-up-a a.ui-link-inherit {
-	color: #ffffff /*{a-bup-color}*/;
+	color: #000000 /*{a-bup-color}*/;
 }
 .ui-btn-hover-a {
-	border: 1px solid #576f84 /*{a-bhover-border}*/;
-	background: #f7931e /*{a-bhover-background-color}*/;
+	border: 1px solid #FFFFFF /*{a-bhover-border}*/;
+	background: #FFFFFF /*{a-bhover-background-color}*/;
 	font-weight: bold;
-	color: #ffffff /*{a-bhover-color}*/;
-	text-shadow: 0 /*{a-bhover-shadow-x}*/ 2px /*{a-bhover-shadow-y}*/ 0 /*{a-bhover-shadow-radius}*/ #444444 /*{a-bhover-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #FFab23 /*{a-bhover-background-start}*/), to( #cd7a18 /*{a-bhover-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #FFab23 /*{a-bhover-background-start}*/, #cd7a18 /*{a-bhover-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #FFab23 /*{a-bhover-background-start}*/, #cd7a18 /*{a-bhover-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #FFab23 /*{a-bhover-background-start}*/, #cd7a18 /*{a-bhover-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #FFab23 /*{a-bhover-background-start}*/, #cd7a18 /*{a-bhover-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #FFab23 /*{a-bhover-background-start}*/, #cd7a18 /*{a-bhover-background-end}*/);
+	color: #000000 /*{a-bhover-color}*/;
+	text-shadow: 0 /*{a-bhover-shadow-x}*/ 1px /*{a-bhover-shadow-y}*/ 0 /*{a-bhover-shadow-radius}*/ #eeeeee /*{a-bhover-shadow-color}*/;
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #FFFFFF /*{a-bhover-background-start}*/), to( #e5e5e5 /*{a-bhover-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #FFFFFF /*{a-bhover-background-start}*/, #e5e5e5 /*{a-bhover-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #FFFFFF /*{a-bhover-background-start}*/, #e5e5e5 /*{a-bhover-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #FFFFFF /*{a-bhover-background-start}*/, #e5e5e5 /*{a-bhover-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #FFFFFF /*{a-bhover-background-start}*/, #e5e5e5 /*{a-bhover-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #FFFFFF /*{a-bhover-background-start}*/, #e5e5e5 /*{a-bhover-background-end}*/);
 }
 .ui-btn-hover-a:visited,
 .ui-btn-hover-a:hover,
 .ui-btn-hover-a a.ui-link-inherit {
-	color: #ffffff /*{a-bhover-color}*/;
+	color: #000000 /*{a-bhover-color}*/;
 }
 .ui-btn-down-a {
-	border: 1px solid #576f84 /*{a-bdown-border}*/;
-	background: #1ea9f7 /*{a-bdown-background-color}*/;
+	border: 1px solid #FFFFFF /*{a-bdown-border}*/;
+	background: #FFFFFF /*{a-bdown-background-color}*/;
 	font-weight: bold;
-	color: #ffffff /*{a-bdown-color}*/;
-	text-shadow: 0 /*{a-bdown-shadow-x}*/ 2px /*{a-bdown-shadow-y}*/ 0 /*{a-bdown-shadow-radius}*/ #444444 /*{a-bdown-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #23c5FF /*{a-bdown-background-start}*/), to( #188ccd /*{a-bdown-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #23c5FF /*{a-bdown-background-start}*/, #188ccd /*{a-bdown-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #23c5FF /*{a-bdown-background-start}*/, #188ccd /*{a-bdown-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #23c5FF /*{a-bdown-background-start}*/, #188ccd /*{a-bdown-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #23c5FF /*{a-bdown-background-start}*/, #188ccd /*{a-bdown-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #23c5FF /*{a-bdown-background-start}*/, #188ccd /*{a-bdown-background-end}*/);
+	color: #000000 /*{a-bdown-color}*/;
+	text-shadow: 0 /*{a-bdown-shadow-x}*/ 1px /*{a-bdown-shadow-y}*/ 0 /*{a-bdown-shadow-radius}*/ #eeeeee /*{a-bdown-shadow-color}*/;
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #e5e5e5 /*{a-bdown-background-start}*/), to( #FFFFFF /*{a-bdown-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #e5e5e5 /*{a-bdown-background-start}*/, #FFFFFF /*{a-bdown-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #e5e5e5 /*{a-bdown-background-start}*/, #FFFFFF /*{a-bdown-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #e5e5e5 /*{a-bdown-background-start}*/, #FFFFFF /*{a-bdown-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #e5e5e5 /*{a-bdown-background-start}*/, #FFFFFF /*{a-bdown-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #e5e5e5 /*{a-bdown-background-start}*/, #FFFFFF /*{a-bdown-background-end}*/);
 }
 .ui-btn-down-a:visited,
 .ui-btn-down-a:hover,
 .ui-btn-down-a a.ui-link-inherit {
-	color: #ffffff /*{a-bdown-color}*/;
+	color: #000000 /*{a-bdown-color}*/;
 }
 .ui-btn-up-a,
 .ui-btn-hover-a,
 .ui-btn-down-a {
-	   font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	     font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 	text-decoration: none;
 }
 /* Structure */
@@ -157,20 +157,20 @@ a.ui-link-inherit {
 /* Active class used as the "on" state across all themes
 -----------------------------------------------------------------------------------------------------------*/
 .ui-btn-active {
-	border: 1px solid #2373a5 /*{global-active-border}*/;
-	background: #4384b8 /*{global-active-background-color}*/;
+	border: 1px solid #c1272d /*{global-active-border}*/;
+	background: #c1272d /*{global-active-background-color}*/;
 	font-weight: bold;
 	color: #ffffff /*{global-active-color}*/;
 	cursor: pointer;
-	text-shadow: 0 /*{global-active-shadow-x}*/ 1px /*{global-active-shadow-y}*/ 0 /*{global-active-shadow-radius}*/ #3373a5 /*{global-active-shadow-color}*/;
+	text-shadow: 0 /*{global-active-shadow-x}*/ 1px /*{global-active-shadow-y}*/ 0 /*{global-active-shadow-radius}*/ #444444 /*{global-active-shadow-color}*/;
 	text-decoration: none;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #1ea9f7 /*{global-active-background-start}*/), to( #32638A /*{global-active-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #1ea9f7 /*{global-active-background-start}*/, #32638A /*{global-active-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #1ea9f7 /*{global-active-background-start}*/, #32638A /*{global-active-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #1ea9f7 /*{global-active-background-start}*/, #32638A /*{global-active-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #1ea9f7 /*{global-active-background-start}*/, #32638A /*{global-active-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #1ea9f7 /*{global-active-background-start}*/, #32638A /*{global-active-background-end}*/);
-	   font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #d42a31 /*{global-active-background-start}*/), to( #ad2328 /*{global-active-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #d42a31 /*{global-active-background-start}*/, #ad2328 /*{global-active-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #d42a31 /*{global-active-background-start}*/, #ad2328 /*{global-active-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #d42a31 /*{global-active-background-start}*/, #ad2328 /*{global-active-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #d42a31 /*{global-active-background-start}*/, #ad2328 /*{global-active-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #d42a31 /*{global-active-background-start}*/, #ad2328 /*{global-active-background-end}*/);
+	     font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-btn-active:visited,
 .ui-btn-active:hover,
@@ -425,7 +425,7 @@ a.ui-link-inherit {
 }
 .ui-checkbox-on .ui-icon,
 .ui-radio-on .ui-icon {
-	background-color: #4384b8 /*{global-active-background-color}*/; /* NOTE: this hex should match the active state color. It's repeated here for cascade */
+	background-color: #c1272d /*{global-active-background-color}*/; /* NOTE: this hex should match the active state color. It's repeated here for cascade */
 }
 /* loading icon */
 .ui-icon-loading {
@@ -491,15 +491,15 @@ a.ui-link-inherit {
 }
 .ui-focus,
 .ui-btn:focus {
-	-moz-box-shadow: inset 0 0 3px #4384b8 /*{global-active-background-color}*/, 0 0 9px #4384b8 /*{global-active-background-color}*/;
-	-webkit-box-shadow: inset 0 0 3px #4384b8 /*{global-active-background-color}*/, 0 0 9px #4384b8 /*{global-active-background-color}*/;
-	box-shadow: inset 0 0 3px #4384b8 /*{global-active-background-color}*/, 0 0 9px #4384b8 /*{global-active-background-color}*/;
+	-moz-box-shadow: inset 0 0 3px #c1272d /*{global-active-background-color}*/, 0 0 9px #c1272d /*{global-active-background-color}*/;
+	-webkit-box-shadow: inset 0 0 3px #c1272d /*{global-active-background-color}*/, 0 0 9px #c1272d /*{global-active-background-color}*/;
+	box-shadow: inset 0 0 3px #c1272d /*{global-active-background-color}*/, 0 0 9px #c1272d /*{global-active-background-color}*/;
 }
 .ui-input-text.ui-focus,
 .ui-input-search.ui-focus {
-	-moz-box-shadow: 0 0 12px #4384b8 /*{global-active-background-color}*/;
-	-webkit-box-shadow: 0 0 12px #4384b8 /*{global-active-background-color}*/;
-	box-shadow: 0 0 12px #4384b8 /*{global-active-background-color}*/;	
+	-moz-box-shadow: 0 0 12px #c1272d /*{global-active-background-color}*/;
+	-webkit-box-shadow: 0 0 12px #c1272d /*{global-active-background-color}*/;
+	box-shadow: 0 0 12px #c1272d /*{global-active-background-color}*/;	
 }
 /* unset box shadow in browsers that don't do it right
 -----------------------------------------------------------------------------------------------------------*/
@@ -516,8 +516,34 @@ a.ui-link-inherit {
 	outline-style: auto;
 }
 
+.filterBackground {
+	background: transparent;
+	border: none;
+}
+
+.ui-listview-filter {
+	background: transparent;
+}
+
+.logo {
+	text-align: left !important;
+	margin-bottom: -5px;
+}
+
+#nameOfApp {
+	text-align: left;
+}
 
 .ui-header .ui-title {
-    margin-right: 10%;
-    margin-left: 10%;
+	margin-left: 10px;
+	text-align: left;
+}
+
+.cta {
+	text-align: center;
+}
+
+a {
+	text-decoration: none;
+	color: white;
 }
