--- a/kauck_kyle_project4/gold_app/css/styles.css
+++ b/kauck_kyle_project4/gold_app/css/styles.css
@@ -1,4 +1,11 @@
 /*
+Kyle Kauck
+Project Four
+MIU 1305
+May 28, 2013
+*/
+
+/*
 * jQuery Mobile 1.3.1
 * Git HEAD hash: 74b4bec049fd93e4fe40205e6157de16eb64eb46 <> Date: Mon Apr 8 2013 19:41:28 UTC
 * http://jquerymobile.com
@@ -303,12 +310,12 @@ a.ui-link-inherit {
 	cursor: pointer;
 	text-shadow: 0 /*{global-active-shadow-x}*/ 1px /*{global-active-shadow-y}*/ 0 /*{global-active-shadow-radius}*/ #3373a5 /*{global-active-shadow-color}*/;
 	text-decoration: none;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #5393c5 /*{global-active-background-start}*/), to( #6facd5 /*{global-active-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #5393c5 /*{global-active-background-start}*/, #6facd5 /*{global-active-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #5393c5 /*{global-active-background-start}*/, #6facd5 /*{global-active-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #5393c5 /*{global-active-background-start}*/, #6facd5 /*{global-active-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #5393c5 /*{global-active-background-start}*/, #6facd5 /*{global-active-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #5393c5 /*{global-active-background-start}*/, #6facd5 /*{global-active-background-end}*/);
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #26d8FF /*{global-active-background-start}*/), to( #1fb1e5 /*{global-active-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #26d8FF /*{global-active-background-start}*/, #1fb1e5 /*{global-active-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #26d8FF /*{global-active-background-start}*/, #1fb1e5 /*{global-active-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #26d8FF /*{global-active-background-start}*/, #1fb1e5 /*{global-active-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #26d8FF /*{global-active-background-start}*/, #1fb1e5 /*{global-active-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #26d8FF /*{global-active-background-start}*/, #1fb1e5 /*{global-active-background-end}*/);
 	   font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-btn-active:visited,
