--- a/kauck_kyle_project4/bronze_app/css/themes/styles.css
+++ b/kauck_kyle_project4/bronze_app/css/themes/styles.css
@@ -1,4 +1,11 @@
 /*
+Kyle Kauck
+Project Four
+MIU 1305
+May 26, 2013
+*/
+
+/*
 * jQuery Mobile 1.3.1
 * Git HEAD hash: 74b4bec049fd93e4fe40205e6157de16eb64eb46 <> Date: Mon Apr 8 2013 19:41:28 UTC
 * http://jquerymobile.com
