Made some tweaks to styles
May 30, 2013

--- a/kauck_kyle_project4/bronze_app/css/themes/styles.css
+++ b/kauck_kyle_project4/bronze_app/css/themes/styles.css
@@ -544,6 +544,8 @@ a.ui-link-inherit {
 .ui-header .ui-title {
 	margin-left: 10px;
 	text-align: left;
+	margin-bottom: 0;
+	margin-top: 2px;
 }
 
 .cta {
