--- a/kauck_kyle_project4/gold_app/css/styles.css
+++ b/kauck_kyle_project4/gold_app/css/styles.css
@@ -671,6 +671,8 @@ a.ui-link-inherit {
 .ui-header .ui-title {
 	margin-left: 10px;
 	text-align: left;
+	margin-bottom: 0;
+	margin-top: 2px;
 }
 
 input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
